add about me section

--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,11 @@ button:focus-visible {
   }
 }
 
+a:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 .app {
   min-height: 768px;
   min-width: 1024px;
